# anticollision-trajectory

./: .gitignore  MechFinalProject_DEV.asv  MechFinalProject_DEV.m  README.md  ReadNodeSensorInformation_Demo.m  Trajectory.csv
GP7 Suppot Files/: CMakeLists.txt  package.xml
GP7 Suppot Files/config/: test.rviz
GP7 Suppot Files/launch/: load_gp7.launch  test_gp7.launch
GP7 Suppot Files/meshes/gp7/VertexFiles/: gp7_t_axis.stl.stl  gp7_u_axis.stl.stl
GP7 Suppot Files/meshes/gp7/collision/: gp7_b_axis.stl  gp7_t_axis.stl
GP7 Suppot Files/meshes/gp7/visual/: gp7_b_axis.stl  gp7_l_axis.stl  gp7_r_axis.stl  gp7_s_axis.stl
GP7 Suppot Files/srdf/: gp7_macro.xacro
GP7 Suppot Files/urdf/: gp7_macro.xacro
anticollision_trajectory/: CMakeLists.txt  Trajectory_Dec2_21_10pm.csv  package.xml  test.mat
anticollision_trajectory/config/: joint_plots.perspective
anticollision_trajectory/launch/: gp7_controllers.launch  gp7_moveit_default.launch  plot_posn_velo.launch
anticollision_trajectory/scripts/: simple_trajectory_from_file.py  test.py  trajectory.csv  trajectory_4points.csv  trajectory_OSU.csv  trajectory_action_client.py  trajectory_example.csv
anticollision_trajectory/scripts_examples/: Final_Trajectory_Demonstration.m  ScratchCode.m  TrajectoryGeneration_Demo.m  VizDemo.m  twoR_potential_fields.m
anticollision_trajectory/scripts_matlab/: Adjoint.m  FrwKin.m  Initialization.mat  LSPB.m  MechFinalProject_DEV.asv  MechFinalProject_DEV.m  Trajectory.csv  TransToRp.m  VecToso3.m  VizDemoLowRes.mat  adjmatrix.m  cdist.m  ftread.m  gp7_s_axis.stl.stl  gradDscnt.asv  gradDscnt.m  inintGP7.m  invHT.m  jnttrjgn.m  screw2skew.m  vect2skew.m
anticollision_trajectory/scripts_matlab/motoman_gp7_support/launch/: test_gp7.launch
anticollision_trajectory/scripts_matlab/motoman_gp7_support/meshes/VertexFiles/: gp7_l_axis.stl.stl
anticollision_trajectory/scripts_matlab/motoman_gp7_support/urdf/: gp7.urdf
meshes/gp7/collision/: gp7_base_axis.stl  gp7_l_axis.stl  gp7_r_axis.stl  gp7_s_axis.stl  gp7_u_axis.stl
meshes/gp7/visual/: gp7_base_axis.stl  gp7_t_axis.stl  gp7_u_axis.stl
robot_support/: README.md
robot_support/motoman_gp7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_support/motoman_gp7_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_gp7.srdf  ompl_planning.yaml
robot_support/motoman_gp7_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  motoman_gp7_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_support/motoman_gp7_support/meshes/VertexFiles/: gp7_b_axis.stl.stl  gp7_base_axis.stl.stl  gp7_r_axis.stl.stl
robot_support/motoman_gp7_support/urdf/: robotURDF.txt
urdf/: gp7.xacro
