<package format="2">
	<name>yaskawa_gp7_support</name>
	<version>0.3.5</version>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<license>Apache V2.0</license>

	<description>
		<p>
			URDF description for the Yaskawa GP7 manipulator.
		</p>
		<p>
			This package contains kinematic descriptions, 3D models and launch files
			for the Yaskawa GP7 manipulator.
		</p>
		<p>
			Joint limits and maximum joint velocities are based on the information 
			found in the online 
			http://www.motoman.com/manuals
			All urdfs are based on the default motion and joint velocity limits, 
			unless noted otherwise.
		</p>
		<p>
			Before using any of the configuration files and / or meshes included
			in this package, be sure to check they are correct for the particular
			robot model and configuration you intend to use them with.
		</p>
	</description>

	<url type="repository">https://github.com/delftrobotics/yaskawa_gp7_support</url>
	<url type="bugtracker">https://github.com/delftrobotics/yaskawa_gp7_support/issues</url>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz</exec_depend>

	<export>
		<architecture_independent/>
	</export>
</package>
